--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-hook-form": "^7.48.2",
     "recoil": "^0.7.7",
     "tailwindcss": "3.3.5",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vercel": "^32.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.200"
